add exp to jwt token
